deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-architect-server
  labels:
    app: github-architect-server
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: github-architect-server
